Shop - Magnifying Glass Cart - Alignment for bigger screen New Page - Product Details Footer - Fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -477,6 +477,7 @@ ul#slide-list{
 {
     float: right;
     margin-left: 0px;
+    width: 27%;
 }
 
 .ft-column-mid
@@ -488,7 +489,7 @@ ul#slide-list{
 {    
     margin: 0 auto;
     padding: 0;
-    padding-left: 15px;
+    padding-left: 80px;
     padding-top: 20px;
     width: 100%;
     height: 200px;
@@ -560,7 +561,7 @@ ul#slide-list{
 
 .foot-nav
 {
-    margin: 25px 0px;
+    margin: 0px;
 }
 
 .foot-nav ul
@@ -599,7 +600,7 @@ ul#slide-list{
     list-style-type: none; 
      /*padding: 0 10px;*/
     text-align: center;
-    margin-top: 20px;
+    margin-top: 8px;
     padding-left: 0px;
 }
 
@@ -655,7 +656,7 @@ ul#slide-list{
 
 .ft-box
 {    
-    width: 100%;
+    width: 75%;
     height: 25px;
     border: 1px solid #fff;
     border-radius: 3px;
@@ -1448,16 +1449,17 @@ input#txtEmail:focus {
 .prod-hover-top
 {
     padding: 8px;
-    margin: -6px auto 48% 1px;
+    margin: 0 auto -35px 0;
     background:transparent;
 }
 
 .prod-hover-top a
 {
     color:#fff;
-    font-size: 12pt;
+    font-size: 26pt;
     font-weight: bold;
     text-decoration: none;
+    line-height: 155px;
 }
 
 .shop-notmob
@@ -3252,6 +3254,64 @@ input#txtEmail:focus {
     color: #000 !important;
 }
 
+/* ADDITIONAL Web Page for Product Details */
+.proddet-outofstock 
+{
+    font-family: GothamBold;
+    font-size: 12pt;
+    background: #232323;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 3px;
+    border: 1px #000 solid;
+    padding-bottom: 5px;
+    margin: auto;
+    width: 30%;
+    color: #fff;
+}
+
+.proddet-properties:last-child
+{
+    font-size: 10pt;
+}
+
+.proddet-properties
+{
+    font-size: 12pt;
+    text-align: justify;
+    word-break: normal;
+    border: none;
+    font-family: Gotham;
+    padding: 0;
+    display: inline-block;
+    width: 48%; 
+}
+
+.proddet-properties b 
+{
+    font-family: BebasNeue;
+    font-size: 15pt;
+}
+
+
+.proddet-quantity
+ {
+    font-family: GothamBold;
+    font-size: 10pt;
+    background: rgba(217, 217, 217, 0.4);
+    text-transform: uppercase;
+    text-align: left;
+    padding: 0 7px;
+    border: 1px #000 solid;
+    padding-bottom: 5px;
+    margin: auto;
+}
+
+.proddet-related-details
+{
+    font-size: 12pt;
+    padding-top: 10px;
+}
 
 /**** WYSIWYG DISPLAYS****/
 /** ABOUT **/
